--- a/index.html
+++ b/index.html
@@ -4,15 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/style.css">
+    <script src="https://kit.fontawesome.com/637a3c3d8e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/style.css">
     <title>OhMyFood Paris</title>
 </head>
 <body>
+    <div id="main-wrapper">
+        <header>
+            <a href="index.html" class="logo-header"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
+        </header>
+        <form method="post" class="formulaire">           
+            <i class="fa-solid fa-location-dot"></i>
+            <h3>Paris, Belleville</h3>  <!-- input? -->          
+        </form>
+        <section class="introduction">
+            <p>Réservez le menu qui vous convient</p>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <button class="bouton" type="button" href="#">Explorez nos restaurants</button>
+        </section>
+        <section class="fonctionnement">
+            <h2>Fonctionnement</h2>
+            <div class="LesEtapes">
+                <div class="etape">
+                    <p>1</p>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+                <div class="etape">
+                    <p>2</p>
+                    <i class="fa-solid fa-list-ul"></i>
+                    <p>Composez votre menu</p>
+                </div>
+                <div class="etape">
+                    <p>3</p>
+                    <i class="fa-solid fa-store"></i>
+                    <p>Dégustez au restaurant</p>
+                </div>
+            </div>
+        </section>
+        <section class="restaurants">
+            <h1>Restaurants</h1>
+            <div class="LesCards">
+                <a href="#" class="card">
+                    <article>
+                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
+                        <p>Nouveau</p>
+                        <div>
+                            <div>
+                                <h2>La palette du goût</h2>
+                                <h3>Ménilmontant</h3>
+                            </div>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+                <a href="#" class="card">
+                    <article>
+                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée">
+                        <p>Nouveau</p>
+                        <div>
+                            <div>
+                                <h2>La note enchantée</h2>
+                                <h3>Charonne</h3>
+                            </div>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </article>
+                </a>
+                <a href="#" class="card">
+                    <article>
+                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo à la française">
+                        <div>
+                            <div>
+                                <h2>À la française</h2>
+                                <h3>Cité Rouge</h3>
+                            </div>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                    </article>    
+                </a>
+                <a href="#" class="card">
+                    <article>
+                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens">
+                        <div>
+                            <div>
+                                <h2>Le délice des sens</h2>
+                                <h3>Folie-Méricourt</h3>
+                            </div>
+                            <i class="fa-light fa-heart"></i>
+                        </div>
+                    </article>    
+                </a>
+
+
+
+
+
+
+            </div>    
+        </section>
+
+
+        <footer>
+            <a href="index.html" class="logo-footer"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
+            <a href="#"><i class="fa-solid fa-utensils"></i><h4>Proposer un restaurant</h4></a>
+            <a href="#"><i class="fa-solid fa-handshake-angle"></i><h4>Devenir partenaire</h4></a>
+            <a href="#"><h4>Mentions légales</h4></a>
+            <a href="#"><h4>Contact</h4></a>
+        </footer>
+    </div>
+
+    <!-- icones
     
-    <h1>OhMyFood</h1>
-    <h2>Test</h2>
+    coeur vide: <i class="fa-light fa-heart"></i>
+    coeur plein: <i class="fa-solid fa-heart"></i>
+    case à cocher: <i class="fa-light fa-circle-check"></i>
+    barre horizontale: <i class="fa-sharp fa-solid fa-horizontal-rule"></i>
+    
 
 
+-->
 
 </body>
 </html>
