--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div id="main-wrapper">
-        <header>
-            <a href="index.html" class="logo-header"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
+        <header class="header">
+            <a href="index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <form method="post" class="formulaire">           
             <i class="fa-solid fa-location-dot"></i>
-            <h3>Paris, Belleville</h3>  <!-- input? -->          
+            <input class="formulaire__location" type="search" value="Paris, Belleville">
         </form>
-        <section class="introduction">
+        <div class="introduction">
             <p>Réservez le menu qui vous convient</p>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <button class="bouton" type="button" href="#">Explorez nos restaurants</button>
-        </section>
+            <a href="#restos">Explorez nos restaurants</a>
+        </div>
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
             <div class="LesEtapes">
@@ -42,75 +42,59 @@
                 </div>
             </div>
         </section>
-        <section class="restaurants">
+        <section class="restaurants" id="restos">
             <h1>Restaurants</h1>
             <div class="LesCards">
-                <a href="#" class="card">
-                    <article>
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
-                        <p>Nouveau</p>
+                <figure class="card">
+                    <a href="#"><p>Nouveau</p><img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût"></a>
+                    <figcaption class="card__text">
                         <div>
-                            <div>
-                                <h2>La palette du goût</h2>
-                                <h3>Ménilmontant</h3>
-                            </div>
-                            <i class="fa-solid fa-heart"></i>
+                            <h2>La palette du goût</h2>
+                            <h3>Ménilmontant</h3>
                         </div>
-                    </article>
-                </a>
-                <a href="#" class="card">
-                    <article>
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée">
-                        <p>Nouveau</p>
+                        <span><i class="fa-regular fa-heart"></i></span>
+                    </figcaption>
+                </figure>
+                <figure class="card">
+                    <a href="#"><p>Nouveau</p><img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée"></a>                 
+                    <figcaption class="card__text">
                         <div>
-                            <div>
-                                <h2>La note enchantée</h2>
-                                <h3>Charonne</h3>
-                            </div>
-                            <i class="fa-solid fa-heart"></i>
+                            <h2>La note enchantée</h2>
+                            <h3>Charonne</h3>
                         </div>
-                    </article>
-                </a>
-                <a href="#" class="card">
-                    <article>
-                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo à la française">
+                        <span><i class="fa-regular fa-heart"></i></span>
+                    </figcaption> 
+                </figure>
+                <figure class="card">
+                    <a href="#"><img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo à la française"></a>
+                    <figcaption class="card__text">
                         <div>
-                            <div>
-                                <h2>À la française</h2>
-                                <h3>Cité Rouge</h3>
-                            </div>
-                            <i class="fa-solid fa-heart"></i>
+                            <h2>À la française</h2>
+                            <h3>Cité Rouge</h3>
                         </div>
-                    </article>    
-                </a>
-                <a href="#" class="card">
-                    <article>
-                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens">
+                        <span><i class="fa-regular fa-heart"></i></span>
+                    </figcaption>
+                </figure>    
+                <figure class="card">
+                    <a href="#"><img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens"></a>
+                    <figcaption class="card__text">
                         <div>
-                            <div>
-                                <h2>Le délice des sens</h2>
-                                <h3>Folie-Méricourt</h3>
-                            </div>
-                            <i class="fa-light fa-heart"></i>
+                            <h2>Le délice des sens</h2>
+                            <h3>Folie-Méricourt</h3>
                         </div>
-                    </article>    
-                </a>
-
-
-
-
-
-
+                        <span><i class="fa-regular fa-heart"></i></span>
+                    </figcaption>
+                </figure>    
             </div>    
         </section>
-
-
-        <footer>
-            <a href="index.html" class="logo-footer"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
-            <a href="#"><i class="fa-solid fa-utensils"></i><h4>Proposer un restaurant</h4></a>
-            <a href="#"><i class="fa-solid fa-handshake-angle"></i><h4>Devenir partenaire</h4></a>
-            <a href="#"><h4>Mentions légales</h4></a>
-            <a href="#"><h4>Contact</h4></a>
+        <footer class="footer">
+            <a href="index.html" class="footer__logo">ohmyfood</a>
+            <div class="footer__nav">
+                <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+                <a href="#">Mentions légales</a>
+                <a href="mailto:ohmyfood@exemple.com">Contact</a>
+            </div>    
         </footer>
     </div>
 
