--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <h1>Restaurants</h1>
             <div class="LesCards">
                 <figure class="card">
-                    <a href="#"><p>Nouveau</p><img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût"></a>
+                    <a href="restaurants/lapalettedugout.html">
+                        <p>Nouveau</p>
+                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
+                    </a>
                     <figcaption class="card__text">
                         <div>
                             <h2>La palette du goût</h2>
@@ -100,11 +103,12 @@
 
     <!-- icones
     
-    coeur vide: <i class="fa-light fa-heart"></i>
+    coeur vide: <i class="fa-regular fa-heart"></i>
     coeur plein: <i class="fa-solid fa-heart"></i>
     case à cocher: <i class="fa-light fa-circle-check"></i>
     barre horizontale: <i class="fa-sharp fa-solid fa-horizontal-rule"></i>
-    
+    flèche gauche: <i class="fa-solid fa-arrow-left"></i>
+    plus: <i class="fa-sharp fa-solid fa-plus"></i>
 
 
 -->
