intégration page d'accueil + responsive

--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637a3c3d8e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
     <title>La palette du goût</title>
 </head>
 <body>
@@ -24,14 +24,18 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="menu__category">
-                <div class="details">
-                    <div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
                         <h3>Fricassée d'escargots</h3>
                         <h4>Au piment d'Espelette</h4>
                     </div>
-                    <p class="details__price">25€</p>
-                    <span class="checkbox"><i class="fa-regular fa-circle-check"></i></span>
+                    <div class="price">
+                        <p>25€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
             <div class="btnzone">
