--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                             <h2>La palette du goût</h2>
                             <h3>Ménilmontant</h3>
                         </div>
-                        <span><i class="fa-regular fa-heart"></i></span>
+                        <span class="hearts">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </span>
                     </figcaption>
                 </figure>
                 <figure class="card">
@@ -65,7 +68,10 @@
                             <h2>La note enchantée</h2>
                             <h3>Charonne</h3>
                         </div>
-                        <span><i class="fa-regular fa-heart"></i></span>
+                        <span class="hearts">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </span>
                     </figcaption> 
                 </figure>
                 <figure class="card">
@@ -75,7 +81,10 @@
                             <h2>À la française</h2>
                             <h3>Cité Rouge</h3>
                         </div>
-                        <span><i class="fa-regular fa-heart"></i></span>
+                        <span class="hearts">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </span>
                     </figcaption>
                 </figure>    
                 <figure class="card">
@@ -85,7 +94,10 @@
                             <h2>Le délice des sens</h2>
                             <h3>Folie-Méricourt</h3>
                         </div>
-                        <span><i class="fa-regular fa-heart"></i></span>
+                        <span class="hearts">
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </span>
                     </figcaption>
                 </figure>    
             </div>    
@@ -100,18 +112,5 @@
             </div>    
         </footer>
     </div>
-
-    <!-- icones
-    
-    coeur vide: <i class="fa-regular fa-heart"></i>
-    coeur plein: <i class="fa-solid fa-heart"></i>
-    case à cocher: <i class="fa-light fa-circle-check"></i>
-    barre horizontale: <i class="fa-sharp fa-solid fa-horizontal-rule"></i>
-    flèche gauche: <i class="fa-solid fa-arrow-left"></i>
-    plus: <i class="fa-sharp fa-solid fa-plus"></i>
-
-
--->
-
 </body>
 </html>
