integration page la palette du goût

--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -20,7 +20,10 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>La palette du goût</h1>
-                <span><i class="fa-regular fa-heart"></i></span>
+                <span class="hearts">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </span>
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
@@ -38,12 +41,126 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <h4>Et ses copeaux de truffe noire</h4>
+                    </div>
+                    <div class="price">
+                        <p>35€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Œuf au plat</h3>
+                        <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                    </div>
+                    <div class="price">
+                        <p>20€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <h2>plats</h2>
+            <i class="fa-solid fa-minus"></i>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Filet de bœuf aux herbes</h3>
+                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                    </div>
+                    <div class="price">
+                        <p>40€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Parmentier de queue de bœuf</h3>
+                        <h4>À la truffe noire sur sa purée de panais</h4>
+                    </div>
+                    <div class="price">
+                        <p>35€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Filet de turbot</h3>
+                        <h4>Aux agrumes</h4>
+                    </div>
+                    <div class="price">
+                        <p>44€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <h2>desserts</h2>
+            <i class="fa-solid fa-minus"></i>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Paris-Brest</h3>
+                        <h4>Revisité</h4>
+                    </div>
+                    <div class="price">
+                        <p>18€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <h4>Et glace à la vanille de Madagascar</h4>
+                    </div>
+                    <div class="price">
+                        <p>22€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Mousse au chocolat</h3>
+                        <h4>Au piment d'Espelette et à la truffe noire</h4>
+                    </div>
+                    <div class="price">
+                        <p>23€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
             <div class="btnzone">
                 <button class="btn" type="button">Commander</button>
             </div>
         </section>
-       
-
         <footer class="footer">
             <a href="/index.html" class="footer__logo">ohmyfood</a>
             <div class="footer__nav">
