intégration pages restaurants +responsive

--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637a3c3d8e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/style.css">
-    <title>La palette du goût</title>
+    <title>Le délice des sens</title>
 </head>
 <body>
     <div id="main-wrapper">
@@ -15,11 +15,11 @@
             <a href="/index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <div class="banner">
-            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
+            <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens">
         </div>
         <section class="menu">
             <div class="menu__title">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <span class="hearts">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
@@ -27,11 +27,11 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-0 ">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Fricassée d'escargots</h3>
-                        <h4>Au piment d'Espelette</h4>
+                        <h3>Tartare de thon</h3>
+                        <h4>Assaisonné au yuzu</h4>
                     </div>
                     <div class="price">
                         <p>25€</p>
@@ -41,11 +41,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-1">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <h4>Et ses copeaux de truffe noire</h4>
+                        <h3>Bouchée de homard croustillant</h3>
+                        <h4>Et sa farandole de petits légumes</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -55,11 +55,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-2">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Œuf au plat</h3>
-                        <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                        <h3>Velouté de cèpes</h3>
+                        <h4>Aux truffes</h4>
                     </div>
                     <div class="price">
                         <p>20€</p>
@@ -71,11 +71,11 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-3">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de bœuf aux herbes</h3>
-                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                        <h3>Poulet rôtie aux herbes de Provence</h3>
+                        <h4>Et sa crème de truffe</h4>
                     </div>
                     <div class="price">
                         <p>40€</p>
@@ -85,11 +85,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-4">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Parmentier de queue de bœuf</h3>
-                        <h4>À la truffe noire sur sa purée de panais</h4>
+                        <h3>Langouste rôtie</h3>
+                        <h4>Et ses légumes de saison</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -99,11 +99,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-5">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de turbot</h3>
-                        <h4>Aux agrumes</h4>
+                        <h3>Côte de bœuf Angus</h3>
+                        <h4>Et sa purée de panais</h4>
                     </div>
                     <div class="price">
                         <p>44€</p>
@@ -115,11 +115,11 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-6">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Paris-Brest</h3>
-                        <h4>Revisité</h4>
+                        <h3>Farandole de desserts</h3>
+                        <h4>Du chef</h4>
                     </div>
                     <div class="price">
                         <p>18€</p>
@@ -129,11 +129,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-7">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <h4>Et glace à la vanille de Madagascar</h4>
+                        <h3>Crème brulée</h3>
+                        <h4>Revisitée</h4>
                     </div>
                     <div class="price">
                         <p>22€</p>
@@ -146,8 +146,8 @@
             <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Mousse au chocolat</h3>
-                        <h4>Au piment d'Espelette et à la truffe noire</h4>
+                        <h3>Tiramisu</h3>
+                        <h4>À la noisette</h4>
                     </div>
                     <div class="price">
                         <p>23€</p>
