--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div id="main-wrapper">
+        <div class="background-loader">
+            <div class="loader">
+            </div>
+        </div>
         <header class="header">
             <a href="index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
@@ -62,7 +66,7 @@
                     </figcaption>
                 </figure>
                 <figure class="card">
-                    <a href="#"><p>Nouveau</p><img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée"></a>                 
+                    <a href="restaurants/lanoteenchantee.html"><p>Nouveau</p><img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée"></a>                 
                     <figcaption class="card__text">
                         <div>
                             <h2>La note enchantée</h2>
@@ -75,7 +79,7 @@
                     </figcaption> 
                 </figure>
                 <figure class="card">
-                    <a href="#"><img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo à la française"></a>
+                    <a href="restaurants/alafrancaise.html"><img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo à la française"></a>
                     <figcaption class="card__text">
                         <div>
                             <h2>À la française</h2>
@@ -88,7 +92,7 @@
                     </figcaption>
                 </figure>    
                 <figure class="card">
-                    <a href="#"><img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens"></a>
+                    <a href="restaurants/ledelicedessens.html"><img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens"></a>
                     <figcaption class="card__text">
                         <div>
                             <h2>Le délice des sens</h2>
