--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637a3c3d8e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/style.css">
-    <title>La palette du goût</title>
+    <title>À la française</title>
 </head>
 <body>
     <div id="main-wrapper">
@@ -15,11 +15,11 @@
             <a href="/index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <div class="banner">
-            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
+            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo à la française">
         </div>
         <section class="menu">
             <div class="menu__title">
-                <h1>La palette du goût</h1>
+                <h1>À la française</h1>
                 <span class="hearts">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
@@ -27,11 +27,11 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-0 ">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Fricassée d'escargots</h3>
-                        <h4>Au piment d'Espelette</h4>
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <h4>Aux zestes d'orange</h4>
                     </div>
                     <div class="price">
                         <p>25€</p>
@@ -41,11 +41,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-1">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <h4>Et ses copeaux de truffe noire</h4>
+                        <h3>Velouté de légumes d'antan</h3>
+                        <h4>Carotte, panais, topinambour</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -55,11 +55,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-2">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Œuf au plat</h3>
-                        <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                        <h3>Soupe à l'oignon</h3>
+                        <h4>Revisitée</h4>
                     </div>
                     <div class="price">
                         <p>20€</p>
@@ -71,11 +71,11 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-3">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de bœuf aux herbes</h3>
-                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <h4>Accompagnées d'une purée de panais</h4>
                     </div>
                     <div class="price">
                         <p>40€</p>
@@ -85,11 +85,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-4">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Parmentier de queue de bœuf</h3>
-                        <h4>À la truffe noire sur sa purée de panais</h4>
+                        <h3>Magret de canard</h3>
+                        <h4>Et parmentier de pommes de terre</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -99,11 +99,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-5">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de turbot</h3>
-                        <h4>Aux agrumes</h4>
+                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                        <h4>Sur son lit de gnocchis aux légumes</h4>
                     </div>
                     <div class="price">
                         <p>44€</p>
@@ -115,11 +115,11 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-6">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Paris-Brest</h3>
-                        <h4>Revisité</h4>
+                        <h3>Pétales de violettes glacés</h3>
+                        <h4>Et purée de noisettes</h4>
                     </div>
                     <div class="price">
                         <p>18€</p>
@@ -129,11 +129,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-7">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <h4>Et glace à la vanille de Madagascar</h4>
+                        <h3>Fondant au chocolat</h3>
+                        <h4>Revisité</h4>
                     </div>
                     <div class="price">
                         <p>22€</p>
@@ -146,8 +146,8 @@
             <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Mousse au chocolat</h3>
-                        <h4>Au piment d'Espelette et à la truffe noire</h4>
+                        <h3>Millefeuille croustillant</h3>
+                        <h4>Myrtilles et pâte d'amande</h4>
                     </div>
                     <div class="price">
                         <p>23€</p>
@@ -171,5 +171,16 @@
             </div>    
         </footer>
     </div>
+
+    <!-- icones
+    
+    case à cocher: <i class="fa-light fa-circle-check"></i>
+    barre horizontale: <i class="fa-solid fa-minus"></i>
+    flèche gauche: <i class="fa-solid fa-arrow-left"></i>
+    plus: <i class="fa-sharp fa-solid fa-plus"></i>
+
+
+-->
+
 </body>
 </html>
