--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637a3c3d8e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/style.css">
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
 </head>
 <body>
     <div id="main-wrapper">
@@ -15,11 +15,11 @@
             <a href="/index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <div class="banner">
-            <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo la palette du goût">
+            <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée">
         </div>
         <section class="menu">
             <div class="menu__title">
-                <h1>La palette du goût</h1>
+                <h1>La note enchantée</h1>
                 <span class="hearts">
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
@@ -27,11 +27,11 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-0 ">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Fricassée d'escargots</h3>
-                        <h4>Au piment d'Espelette</h4>
+                        <h3>Ravioles de foie gras</h3>
+                        <h4>Accompagnées de leur crème à la truffe</h4>
                     </div>
                     <div class="price">
                         <p>25€</p>
@@ -41,11 +41,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-1">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <h4>Et ses copeaux de truffe noire</h4>
+                        <h3>Caviar osciètre</h3>
+                        <h4>Sur blini à la farine de blé noir</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -55,11 +55,25 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-2">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Œuf au plat</h3>
-                        <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                        <h3>Homard et espuma de potiron</h3>
+                        <h4>Marinés aux zestes d'orange</h4>
+                    </div>
+                    <div class="price">
+                        <p>20€</p>
+                    </div>
+                </div>
+                <div class="category__checkbox">
+                    <span><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+            </div>
+            <div class="category">
+                <div class="category__text">
+                    <div class="details">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <h4>Confiture de figue et pain toasté</h4>
                     </div>
                     <div class="price">
                         <p>20€</p>
@@ -71,11 +85,11 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-3">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de bœuf aux herbes</h3>
-                        <h4>Accompagné de sa ribambelle de légumes</h4>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <h4>Sur lit de purée de céleri-rave</h4>
                     </div>
                     <div class="price">
                         <p>40€</p>
@@ -85,11 +99,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-4">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Parmentier de queue de bœuf</h3>
-                        <h4>À la truffe noire sur sa purée de panais</h4>
+                        <h3>Langoustine poêlée</h3>
+                        <h4>Purée de patate douce</h4>
                     </div>
                     <div class="price">
                         <p>35€</p>
@@ -99,11 +113,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-5">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Filet de turbot</h3>
-                        <h4>Aux agrumes</h4>
+                        <h3>Mijoté de queue de bœuf </h3>
+                        <h4>Et riz sauvage aux zestes de citron</h4>
                     </div>
                     <div class="price">
                         <p>44€</p>
@@ -115,11 +129,11 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category delay-6">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Paris-Brest</h3>
-                        <h4>Revisité</h4>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <h4>Glace au caramel brun et sel de Guérande</h4>
                     </div>
                     <div class="price">
                         <p>18€</p>
@@ -129,11 +143,11 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category delay-7">
+            <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <h4>Et glace à la vanille de Madagascar</h4>
+                        <h3>Baba au rhum revisité</h3>
+                        <h4>Avec son coulis de citron</h4>
                     </div>
                     <div class="price">
                         <p>22€</p>
@@ -146,8 +160,8 @@
             <div class="category">
                 <div class="category__text">
                     <div class="details">
-                        <h3>Mousse au chocolat</h3>
-                        <h4>Au piment d'Espelette et à la truffe noire</h4>
+                        <h3>Tarte au citron meringuée</h3>
+                        <h4>Destructurée</h4>
                     </div>
                     <div class="price">
                         <p>23€</p>
