Réglages derniers points

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div id="main-wrapper">
-        <div class="background-loader">
-            <div class="loader">
-            </div>
+        <div class="loader">
+            <div class="loader__rotate"></div>
         </div>
         <header class="header">
             <a href="index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
