--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -27,7 +27,7 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-0">
                 <div class="category__text">
                     <div class="details">
                         <h3>Ravioles de foie gras</h3>
@@ -41,7 +41,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-1">
                 <div class="category__text">
                     <div class="details">
                         <h3>Caviar osciètre</h3>
@@ -55,7 +55,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-2">
                 <div class="category__text">
                     <div class="details">
                         <h3>Homard et espuma de potiron</h3>
@@ -69,7 +69,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-3">
                 <div class="category__text">
                     <div class="details">
                         <h3>Foie gras de canard cuit entier</h3>
@@ -85,7 +85,7 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-4">
                 <div class="category__text">
                     <div class="details">
                         <h3>Noix de coquilles Saint-Jacques</h3>
@@ -99,7 +99,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-5">
                 <div class="category__text">
                     <div class="details">
                         <h3>Langoustine poêlée</h3>
@@ -113,7 +113,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-6">
                 <div class="category__text">
                     <div class="details">
                         <h3>Mijoté de queue de bœuf </h3>
@@ -129,7 +129,7 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-7">
                 <div class="category__text">
                     <div class="details">
                         <h3>Macaron noisette et chocolat</h3>
@@ -143,7 +143,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-8">
                 <div class="category__text">
                     <div class="details">
                         <h3>Baba au rhum revisité</h3>
@@ -157,7 +157,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-9">
                 <div class="category__text">
                     <div class="details">
                         <h3>Tarte au citron meringuée</h3>
