--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -27,7 +27,7 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-0">
                 <div class="category__text">
                     <div class="details">
                         <h3>Tartare de thon</h3>
@@ -41,7 +41,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-1">
                 <div class="category__text">
                     <div class="details">
                         <h3>Bouchée de homard croustillant</h3>
@@ -55,7 +55,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-2">
                 <div class="category__text">
                     <div class="details">
                         <h3>Velouté de cèpes</h3>
@@ -71,7 +71,7 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-3">
                 <div class="category__text">
                     <div class="details">
                         <h3>Poulet rôtie aux herbes de Provence</h3>
@@ -85,7 +85,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-4">
                 <div class="category__text">
                     <div class="details">
                         <h3>Langouste rôtie</h3>
@@ -99,7 +99,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-5">
                 <div class="category__text">
                     <div class="details">
                         <h3>Côte de bœuf Angus</h3>
@@ -115,7 +115,7 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-6">
                 <div class="category__text">
                     <div class="details">
                         <h3>Farandole de desserts</h3>
@@ -129,7 +129,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-7">
                 <div class="category__text">
                     <div class="details">
                         <h3>Crème brulée</h3>
@@ -143,7 +143,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-8">
                 <div class="category__text">
                     <div class="details">
                         <h3>Tiramisu</h3>
