--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -27,7 +27,7 @@
             </div>
             <h2>entrées</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-0">
                 <div class="category__text">
                     <div class="details">
                         <h3>Tartare de poulpe acidulé</h3>
@@ -41,7 +41,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-1">
                 <div class="category__text">
                     <div class="details">
                         <h3>Velouté de légumes d'antan</h3>
@@ -55,7 +55,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-2">
                 <div class="category__text">
                     <div class="details">
                         <h3>Soupe à l'oignon</h3>
@@ -71,7 +71,7 @@
             </div>
             <h2>plats</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-3">
                 <div class="category__text">
                     <div class="details">
                         <h3>Coquilles Saint-Jacques</h3>
@@ -85,7 +85,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-4">
                 <div class="category__text">
                     <div class="details">
                         <h3>Magret de canard</h3>
@@ -99,7 +99,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-5">
                 <div class="category__text">
                     <div class="details">
                         <h3>Pigeonneau d'Ille-et-Vilaine</h3>
@@ -115,7 +115,7 @@
             </div>
             <h2>desserts</h2>
             <i class="fa-solid fa-minus"></i>
-            <div class="category">
+            <div class="category delay-6">
                 <div class="category__text">
                     <div class="details">
                         <h3>Pétales de violettes glacés</h3>
@@ -129,7 +129,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-7">
                 <div class="category__text">
                     <div class="details">
                         <h3>Fondant au chocolat</h3>
@@ -143,7 +143,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-8">
                 <div class="category__text">
                     <div class="details">
                         <h3>Millefeuille croustillant</h3>
@@ -171,16 +171,5 @@
             </div>    
         </footer>
     </div>
-
-    <!-- icones
-    
-    case à cocher: <i class="fa-light fa-circle-check"></i>
-    barre horizontale: <i class="fa-solid fa-minus"></i>
-    flèche gauche: <i class="fa-solid fa-arrow-left"></i>
-    plus: <i class="fa-sharp fa-solid fa-plus"></i>
-
-
--->
-
 </body>
 </html>
