--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -143,7 +143,7 @@
                     <span><i class="fa-solid fa-circle-check"></i></span>
                 </div>
             </div>
-            <div class="category">
+            <div class="category delay-8">
                 <div class="category__text">
                     <div class="details">
                         <h3>Mousse au chocolat</h3>
