--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -11,11 +11,11 @@
 <body>
     <div id="main-wrapper">
         <header class="header">
-            <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <a href="index.html" class="header__logo"><img src="assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="../index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <div class="banner">
-            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens">
+            <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo le délice des sens">
         </div>
         <section class="menu">
             <div class="menu__title">
@@ -162,7 +162,7 @@
             </div>
         </section>
         <footer class="footer">
-            <a href="index.html" class="footer__logo">ohmyfood</a>
+            <a href="../index.html" class="footer__logo">ohmyfood</a>
             <div class="footer__nav">
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
