--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -12,7 +12,7 @@
     <div id="main-wrapper">
         <header class="header">
             <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <a href="../index.html" class="header__logo"><img src="/assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
+            <a href="../index.html" class="header__logo"><img src="../assets/images/logo/ohmyfood.png" alt="logo Oh My Food"></a>
         </header>
         <div class="banner">
             <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo la note enchantée">
